# clawjournal

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  OPENREFINERY_AGENT_FAILURE_SHARING_HOOKS.md  PRIVACY.md  README.md  RELEASING.md  algorithm-0524.md  pyproject.toml  redefine-ai-score.md  simplified_upload.md
.claude-plugin/: marketplace.json
.github/workflows/: betterleaks-pin.yml  publish.yml  test.yml  trufflehog-pin.yml
clawjournal/: __init__.py  agent_hooks.py  auto_upload.py  auto_upload_client.py  auto_upload_credentials.py  auto_upload_scheduler.py  cli.py  cli_auto_upload.py  cli_benchmark.py  cli_skill.py  config.py  desktop.py  findings.py  openrefinery_hooks.py  paths.py  pricing.py  raw_sources.py  selfupdate.py  share_cli.py  share_flow.py  transcript_viewer.py
clawjournal/benchmark/: __init__.py  generate.py  render.py  schema.py  select.py  store.py
docs/: automatic_failure_corpus_scoring.md  recurring-upload-server-contract.md
scripts/: check_betterleaks_pin.py  check_trufflehog_pin.py  install.ps1  install.sh  install_lock.py
tests/: conftest.py  test_agent_hooks.py  test_auto_upload.py  test_auto_upload_client.py  test_auto_upload_credentials.py  test_auto_upload_scheduler.py  test_check_betterleaks_pin.py  test_check_trufflehog_pin.py  test_cli.py  test_cli_auto_upload.py  test_cli_config_masking.py  test_config.py  test_desktop.py  test_export_markdown.py  test_findings_substrate.py  test_install_scripts.py  test_openrefinery_hooks.py  test_pricing.py  test_raw_sources.py  test_repo_layout.py  test_selfupdate.py  test_share_cli.py  test_share_flow.py  test_transcript_viewer.py
(+158 files in other folders)
